# cudagraphcoloring

./: ProjectHome.md
CUDAColoring/PPoPP/: graphColoring.cu  graphColoring.h
CUDAColoring/PPoPPMetis/: graphColoring.cu  graphDriver.cpp  metisTest.txt.part.4
CUDAColoring/adjList/: graphColoring.cu  graphColoring.h  graphDriver.cpp
CUDAColoring/adjListFinal/: Makefile
CUDAColoring/cleanFinal/: cuExe  graphColoring.cu  graphColoring.h  graphDriver.cpp
CUDAColoring/finalAutoScript/: graphColoring.cu  graphDriver.cpp  script  scriptMetis  scriptMetisPWTK  scriptPkustk11  scriptPkustk11CSV
CUDAColoring/finalOne/: graphColoring.cu
CUDAColoring/finalOneAutoPass/: graphColoring.cu
CUDAColoring/finalSubmission/: graphColoring.h
CUDAColoring/improvedVersion/: cuExe  graphColoring.cu  graphColoring.h  graphDriver.cpp
CUDAColoring/ipdps/: graphColoring.cu  graphDriver.cpp
CUDAColoring/lousyVersion/: Makefile  cuExe  driver.c  graphColoring.cu  graphColoring.h  graphDriver.cpp  main.cpp
CUDAColoring/lousyVersion/DirCMake/: CMakeLists.txt
CUDAColoring/metisClean/: graphColoring.h  graphDriver.cpp
CUDAColoring/metisCleanNoRand/: graphColoring.h  graphDriver.cpp
CUDAColoring/metisCleanPartition/: graphColoring.cu  graphColoring.h  graphDriver.cpp
CUDAColoring/realData/: graphColoring.h  graphDriver.cpp
CUDAColoring/realData/DirCMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cudaGraphColoring
CUDAColoring/sdoLike/SDOTest/: sdo.cpp
CUDAColoring/tesla Good/: cuExe  graphColoring.cu  graphColoring.h
GraphColoring/: main.cpp
GraphColoring/GraphColoring.xcodeproj/: pascalgrosset.mode1v3
GraphColoring/cudaGraphColoring/: cudaGraphColoring.sln
GraphColoring/cudaGraphColoring/cudaGraphColoring/: cudaGraphColoring.vcproj
Paper/: Evaluating GraphColoring.tex  PosterPaper-Evaluating GraphCololoring.tex  reference.bib
trunk/CUDAColoring/PPoPP/: graphDriver.cpp
trunk/CUDAColoring/PPoPPMetis/: graphColoring.cu  graphDriver.cpp  metisTest.txt
trunk/CUDAColoring/adjList/: Makefile  graphColoring.cu  graphColoring.h  graphDriver.cpp
trunk/CUDAColoring/cleanFinal/: graphColoring.cu  graphColoring.h  graphDriver.cpp
trunk/CUDAColoring/finalAutoScript/: graphColoring.cu  scriptMetisPWTKCSV
trunk/CUDAColoring/finalOne/: graphColoring.h  graphDriver.cpp
trunk/CUDAColoring/finalOneAutoPass/: graphColoring.h  graphDriver.cpp
trunk/CUDAColoring/finalSubmission/: graphColoring.cu  graphDriver.cpp
trunk/CUDAColoring/improvedVersion/: Makefile  graphColoring.cu  graphColoring.h  graphDriver.cpp
trunk/CUDAColoring/ipdps/: CMakeLists.txt  graphDriver.cpp
trunk/CUDAColoring/lousyVersion/: cuExe  graphColoring.cu  graphDriver.cpp  vectorOp.cu  vectorOp.h
trunk/GraphColoring/: GraphColoring.1  main.cpp
trunk/Paper/: Evaluating GraphColoring.tex  PosterPaper-Evaluating GraphCololoring.tex  reference.bib
trunk/realGraphs/: fileReader.cpp
(+27 files in other folders)
